# financial-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml  eval.yaml
data/eval/: comparison_report.md  qa_AAPL.json  qa_GOOGL.json  qa_JPM.json  qa_MSFT.json  qa_NVDA.json  qa_pairs.json  results_fixed_dense.jsonl  results_fixed_hybrid.jsonl
scripts/: 01_download_data.py  02_build_index.py  03_generate_eval_set.py  04_run_evaluation.py  build_index.py  download_data.py  run_evaluation.py
src/: __init__.py
src/api/: main.py  routes.py  schemas.py
src/chunking/: base.py  fixed_chunker.py  semantic_chunker.py
src/data/: preprocessor.py  sec_loader.py
src/embeddings/: embedder.py
src/evaluation/: __init__.py  eval_runner.py  evaluator.py  generation_metrics.py  qa_generator.py  retrieval_metrics.py
src/generation/: __init__.py  generator.py  llm_client.py  prompts.py
src/ingestion/: document_parser.py  sec_downloader.py
src/pipeline/: __init__.py  rag_pipeline.py
src/retrieval/: __init__.py  dense.py  hybrid.py  reranker.py  retriever.py  sparse.py  vector_store.py
src/utils/: config.py  logging.py
tests/: conftest.py  test_api.py  test_chunking.py  test_evaluation.py  test_preprocessor.py  test_retrieval.py
